--- a/parallax/index.html
+++ b/parallax/index.html
@@ -14,7 +14,7 @@
 
             <div class="card card__one">
                 <div class="card__bg"></div>
-                <img class="card__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/62105/3dr_mono.png">
+                <img class="card__img" src="static/images/1.png">
                 <div class="card__text">
                     <p class="card__title">Princess Mononoke</p>
                 </div>
@@ -22,7 +22,7 @@
 
             <div class="card card__two">
                 <div class="card__bg"></div>
-                <img class="card__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/62105/3dr_chihiro.png">
+                <img class="card__img" src="static/images/2.png">
                 <div class="card__text">
                     <p class="card__title">Spirited Away</p>
                 </div>
@@ -30,7 +30,7 @@
 
             <div class="card card__three">
                 <div class="card__bg"></div>
-                <img class="card__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/62105/3dr_howlcastle.png">
+                <img class="card__img" src="static/images/3.png">
                 <div class="card__text">
                     <p class="card__title">Howl's Moving Castle</p>
                 </div>
