Changed class to id

--- a/metanit-float-html/index.html
+++ b/metanit-float-html/index.html
@@ -43,7 +43,7 @@
                     <li>item 3</li>
                 </ul>
             </div>
-            <div class="article">
+            <div id="article">
                 <h2>Заголовок 2</h2>
                 <p>
                     Nunc vitae justo feugiat, feugiat mi at, consequat ligula. Integer malesuada 
